--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
   ],
   "dependencies": {
     "angular": "^1.6.5",
-    "angular-material": "^1.1.4"
+    "angular-material": "^1.1.4",
+    "angular-ui-router": "^1.0.6",
+    "angular-carousel": "^1.1.0"
   }
 }
