--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "pg": "^7.3.0",
-    "random-number": "0.0.7",
+    "random-number-generator": "^1.0.2",
     "sequelize": "^4.4.3"
   }
 }
